<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView4"
            app:srcCompat="@drawable/ich"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/register_screen_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/EmailHint"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/register_screen_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="40dp"
            android:ems="10"
            android:hint="@string/NameHint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/register_screen_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:ems="10"
            android:hint="@string/PasswordHint"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/register_screen_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:ems="10"
            android:hint="@string/ConfirmPassHint"
            android:inputType="textPassword" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/register_screen_register_user_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:backgroundTint="#F57C00"
                android:onClick="SignUpClicked"
                android:text="@string/RegisterBtn"
                android:textColor="#DDFFFFFF" />

            <ProgressBar
                android:id="@+id/register_screen_register_loading"
                android:layout_width="wrap_content"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"/>
        </RelativeLayout>



        <TextView
            android:id="@+id/register_screen_error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Please enter valid details."
            android:textColor="@android:color/holo_red_dark"
            android:visibility="invisible" />


    </LinearLayout>


    <TextView
        android:id="@+id/RegisterTxt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:onClick="LoginClick"
        android:padding="8dp"
        android:text="@string/RegsiterTxt2"
        android:textColor="#303F9F"/>


</RelativeLayout>