<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:menu="@menu/main"
    tools:context=".activities.MainActivity">

    <!-- Add TextView to display the date -->
    <TextView
        android:id="@+id/date_view"
        android:layout_width="142dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/date_view"
        android:textColor="@android:color/background_dark"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/calender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <!-- Add CalenderView to display the Calender -->
    <CalendarView
        android:id="@+id/calender"
        android:layout_width="356dp"
        android:layout_height="303dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_square"
        android:dateTextAppearance="@android:style/TextAppearance.Holo.Medium"
        android:theme="@style/Widget.CalendarView.Custom"
        android:weekDayTextAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.692"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.233"></CalendarView>

    <TextView
        android:id="@+id/UpcomingTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/UpcomingTxt"
        android:textColor="#0500F3"
        android:textSize="23dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calender"
        app:layout_constraintVertical_bias="0.058" />

    <ScrollView
        android:layout_width="370dp"
        android:layout_height="277dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UpcomingTxt">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="195dp"
                    android:layout_height="59dp"
                    android:orientation="vertical">

                    <View style="@style/createEventSeparator" />


                    <TextView
                        android:id="@+id/UpTxt1"
                        android:layout_width="204dp"
                        android:layout_height="36dp"
                        android:padding="5dp"
                        android:text="@string/UpTxt1"
                        android:textColor="@color/Black"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/UpTxt_1"
                        android:layout_width="202dp"
                        android:layout_height="23dp"
                        android:padding="2dp"
                        android:text="@string/UpTxt_1" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="172dp"
                    android:layout_height="match_parent"
                    android:onClick="Button2Click"
                    android:layout_weight="1"
                    android:backgroundTint="#37FFFFFF"
                    app:srcCompat="@drawable/icon12"
                    tools:srcCompat="@drawable/icon12" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="188dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <View style="@style/createEventSeparator" />


                    <TextView
                        android:id="@+id/UpTxt2"
                        android:layout_width="216dp"
                        android:layout_height="36dp"
                        android:padding="5dp"
                        android:text="@string/UpTxt2"
                        android:textColor="@color/Black"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/UpTxt_2"
                        android:layout_width="211dp"
                        android:layout_height="27dp"
                        android:padding="2dp"
                        android:text="@string/UpTxt_2" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/imageButton5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:onClick="Button5Click"
                    android:layout_weight="1"
                    android:background="#9CFFFFFF"
                    android:backgroundTint="#9CFFFFFF"
                    app:srcCompat="@drawable/icon15" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="195dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <View style="@style/createEventSeparator" />


                    <TextView
                        android:id="@+id/UpTxt3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/UpTxt3"
                        android:textColor="@color/Black"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/UpTxt_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/UpTxt_3" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="wrap_content"
                    android:onClick="Button3Click"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#9CFFFFFF"
                    app:srcCompat="@drawable/icon17" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@drawable/bg_line"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="195dp"
                    android:layout_height="64dp"
                    android:orientation="vertical">

                    <View style="@style/createEventSeparator" />


                    <TextView
                        android:id="@+id/UpTxt4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/UpTxt4"
                        android:textColor="@color/Black"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/UpTxt_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/UpTxt_4" />

                </LinearLayout>

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="145dp"
                    android:layout_height="64dp"
                    android:layout_weight="1"
                    android:onClick="Button4Click"
                    android:background="#9CFFFFFF"
                    app:srcCompat="@drawable/icon24" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="59dp"
                    android:orientation="vertical">

                    <View style="@style/createEventSeparator" />


                    <TextView
                        android:id="@+id/UpTxt5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/UpTxt5"
                        android:textColor="@color/Black"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/UpTxt_5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/UpTxt_5" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/imageButton7"
                    android:layout_width="145dp"
                    android:onClick="Button7Click"
                    android:layout_height="64dp"
                    android:layout_weight="1"
                    android:background="#9CFFFFFF"
                    app:srcCompat="@drawable/icon2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="197dp"
                    android:layout_height="60dp"
                    android:orientation="vertical">

                    <View style="@style/createEventSeparator" />


                    <TextView
                        android:id="@+id/UpTxt6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/UpTxt6"
                        android:textColor="@color/Black"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/UpTxt_6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/UpTxt_1" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/imageButton8"
                    android:layout_width="145dp"
                    android:layout_height="64dp"
                    android:onClick="Button8Click"
                    android:layout_weight="1"
                    android:backgroundTint="#88FFFFFF"
                    app:srcCompat="@drawable/icon10" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>